--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">NewsApp</string>
     <string name="go_to_news">news</string>
     <string name="go_to_home">Home</string>
+    <string name="go_to_search">search\n</string>
+    <string name="error_loading_news_from_api">Error while fetching news</string>
+    <string name="loading_news_from_api">Loading</string>
 </resources>
