Changed api from news to FinalSpace api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">NewsApp</string>
-    <string name="go_to_news">news</string>
+    <string name="app_name">Final Space</string>
+    <string name="go_to_characters">characters</string>
     <string name="go_to_home">Home</string>
-    <string name="go_to_search">search\n</string>
-    <string name="error_loading_news_from_api">Error while fetching news</string>
-    <string name="loading_news_from_api">Loading</string>
+    <string name="go_to_search">search</string>
+    <string name="error_loading_characters_from_api">Error while fetching characters</string>
+    <string name="loading">Loading</string>
+    <string name="error">Error</string>
 </resources>
