--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error_loading_characters_from_api">Error while fetching characters</string>
     <string name="loading">Loading</string>
     <string name="error">Error</string>
+    <string name="error_loading_locations_from_api">Error while fetching locations</string>
 </resources>
