--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="loading">Loading</string>
     <string name="error">Error</string>
     <string name="error_loading_locations_from_api">Error while fetching locations</string>
+    <string name="go_to_locations">locations</string>
 </resources>
