--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Final Space</string>
-    <string name="go_to_characters">characters</string>
+    <string name="go_to_characters">Characters</string>
     <string name="go_to_home">Home</string>
-    <string name="go_to_search">search</string>
+    <string name="go_to_search">Search</string>
     <string name="error_loading_characters_from_api">Error while fetching characters</string>
     <string name="loading">Loading</string>
     <string name="error">Error</string>
     <string name="error_loading_locations_from_api">Error while fetching locations</string>
-    <string name="go_to_locations">locations</string>
+    <string name="go_to_locations">Locations</string>
 </resources>
